--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,6 +1,8 @@
 body {
- margin: 10px;
- white-space: nowrap;
+   color: black;
+   font-family: 'Roboto';
+   margin: 10px;
+   white-space: nowrap;
 }
 
 h1 {
